--- a/BJ_Cliente/Properties/Resources.resx
+++ b/BJ_Cliente/Properties/Resources.resx
@@ -121,11 +121,14 @@
   <data name="_2_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Jack_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Jack de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Reina_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Reina de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Rey_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_7_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\7 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_5_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -138,9 +141,6 @@
   </data>
   <data name="Rey_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_8_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\8 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_5_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -178,6 +178,12 @@
   <data name="Rey_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Tablero_desactivado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tablero_desactivado.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_4_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_9_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\9 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -193,29 +199,20 @@
   <data name="_5_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="_4_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Jack_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jack de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_9_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\9 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="_3_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="As_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\As de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_7_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\7 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_6_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_8_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_10_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -235,8 +232,8 @@
   <data name="_8_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Rey_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Rey de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Jack_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Jack de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_4_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,14 +241,14 @@
   <data name="Reina_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reina de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Jack_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Jack de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_6_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_6_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="As_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\As de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_3_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_9_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\9 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -265,8 +262,14 @@
   <data name="_6_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Reina_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Reina de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_3_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="As_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\As de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Rey_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Rey de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_2_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -274,16 +277,16 @@
   <data name="Reina_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reina de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Jack_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Jack de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_4_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\4 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_3_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Tablero_desactivado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Tablero_desactivado.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_9_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="As_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\As de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ranking" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ranking.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
